[package]
name = "time2freq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = ["derive"] }
cpal = "0.14.0"
crossbeam = "0.8.2"
log = "0.4.17"
noise = { path = "/home/zach/projects/wgpu/noise" }
pollster = "0.2.5"
rtrb = "0.2.2"
symphonia = "0.5.1"
wgpu = "0.13.1"
winit = "0.27.3"
